--- a/doc/Esterni/Glossario/terminiGlossario.tex
+++ b/doc/Esterni/Glossario/terminiGlossario.tex
@@ -1,31 +1,35 @@
-\item[Accoppiamento] Grado di dipendenza tra i vari componenti di un sistema.
-\item[Amministratore di progetto] Chi controlla che ad ogni istante della vita del progetto le risorse (umane, materiali, economiche e strutturali) siano presenti e operanti; inoltre, gestisce la documentazione e controlla il versionamento e la configurazione.
-\item[Analista] Chi ha il compito di individuare, a partire dai bisogni del cliente, il problema e decomporlo in requisiti da fornire ai progettisti.
+\item[accoppiamento] Grado di dipendenza tra i vari componenti di un sistema.
+\item[amministratore di progetto] Chi controlla che ad ogni istante della vita del progetto le risorse (umane, materiali, economiche e strutturali) siano presenti e operanti; inoltre, gestisce la documentazione e controlla il versionamento e la configurazione.
+\item[analista] Chi ha il compito di individuare, a partire dai bisogni del cliente, il problema e decomporlo in requisiti da fornire ai progettisti.
 \item[Asana] Servizio web utilizzato per coordinare le attività di project management.
 \item[Astah] Strumento software sviluppato da Change Vision per la modellazione UML. Offre diverse funzionalità fra cui la possibilità di creare diagrammi delle classi, diagrammi dei casi d’uso, diagrammi delle attività, diagrammi di sequenza e diagrammi dei componenti.
 \item[AWS] Acronimo per Amazon Web Services è una piattaforma di servizi cloud in grado di offrire potenza di elaborazione, storage di database, distribuzione dei contenuti e altre funzionalità a supporto del dimensionamento e della crescita delle attività aziendali.
-\item[Backup] Replicazione di materiale informativo archiviato nella memoria di massa dei computer, al fine di prevenire la perdita definitiva dei dati in caso di eventi malevoli accidentali o intenzionali.
-\item[Baseline] Nel contesto dell'Ingegneria del Software, ed in particolare del ciclo di vita di un particolare progetto, punto d'arrivo tecnico dal quale non si retrocede.
-\item[Branch] All'interno di un repository, insieme di versioni in evoluzione.
-\item[Browser] Si tratta di un’applicazione software che permette il recupero, la presentazione e la navigazione di risorse su web. Svolge principalmente due funzioni essenziali: invia nella rete la richiesta di uno specifico documento secondo uno specifico protocollo di comunicazione e interpreta la risorsa in risposta presentendola all’utente che ne ha avviato la richiesta.
-\item[Caso d'uso] Insieme di scenari, di cui uno principale e più alternativi, che hanno in comune il raggiungimento di uno specifico obiettivo da parte dell'utente di un programma software; è una tecnica usata nei processi di ingegneria del software per effettuare in maniera esaustiva e non ambigua, la raccolta dei requisiti.
-\item[Ciclo di vita (di un prodotto)] L'insieme degli stati che un prodotto software assume, dal concepimento al ritiro delle transizioni fra tali stati (ovvero quelle attività svolte sul prodotto che servono a farlo avanzare nel grado di maturazione).
-\item[Client] Componente hardware e/o software che richiede servizi o risorse a un server.
-\item[Configurazione] Di quali parti si compone un prodotto e il modo in cui esse interagiscono fra di loro.
+\item[backup] Replicazione di materiale informativo archiviato nella memoria di massa dei computer, al fine di prevenire la perdita definitiva dei dati in caso di eventi malevoli accidentali o intenzionali.
+\item[baseline] Nel contesto dell'Ingegneria del Software, ed in particolare del ciclo di vita di un particolare progetto, punto d'arrivo tecnico dal quale non si retrocede.
+\item[branch] All'interno di un repository, insieme di versioni in evoluzione.
+\item[browser] Si tratta di un’applicazione software che permette il recupero, la presentazione e la navigazione di risorse su web. Svolge principalmente due funzioni essenziali: invia nella rete la richiesta di uno specifico documento secondo uno specifico protocollo di comunicazione e interpreta la risorsa in risposta presentendola all’utente che ne ha avviato la richiesta.
+\item[caso d'uso] Insieme di scenari, di cui uno principale e più alternativi, che hanno in comune il raggiungimento di uno specifico obiettivo da parte dell'utente di un programma software; è una tecnica usata nei processi di ingegneria del software per effettuare in maniera esaustiva e non ambigua, la raccolta dei requisiti.
+\item[ciclo di vita (di un prodotto)] L'insieme degli stati che un prodotto software assume, dal concepimento al ritiro delle transizioni fra tali stati (ovvero quelle attività svolte sul prodotto che servono a farlo avanzare nel grado di maturazione).
+\item[client] Componente hardware e/o software che richiede servizi o risorse a un server.
 \item[Controllore della qualità] Funzione aziendale (e non ruolo di progetto) di chi accerta la qualità dei prodotti.
 \item[CSS3] Acronimo per Cascade Stylesheet Language 3, è l'ultima versione - ancora in via di definizione standard - del linguaggio CSS, usato per definire la formattazione di documenti HTML, XHTML e XML come ad esempio i siti web e le relative pagine web.
 \item[Design pattern] Soluzione progettuale generale ad un problema ricorrente. Si tratta di una descrizione o modello logico da applicare per la risoluzione di un problema che può presentarsi in diverse situazioni durante le fasi di progettazione e sviluppo del software.
+\item[diagramma delle attività] Diagramma UML che descrive il flusso di attività di una procedura (metodo o funzione), tramite i concetti di scelta, iterazione e concorrenza.
 \item[Diagramma dei casi d'uso] Grafo orientato in cui ogni nodo rappresenta un attore o un caso d'uso; ogni arco può essere una comunicazione tra un attore e un caso d'uso oppure una relazione (di estensione, inclusione o generalizzazione) tra due casi d'uso o tra due attori.
+\item[diagramma delle classi] Diagramma UML che descrive l'architettura di un sistema orientato agli oggetti, mostrando le classi, le loro proprietà, il loro comportamento e le loro relazioni.
 \item[Diagramma di Gantt] Diagramma usato principalmente nelle attività di amministrazione di progetto; permette la rappresentazione grafica di un calendario di attività, utile al fine di pianificare, coordinare e tracciare specifiche attività in un progetto dando una chiara illustrazione dello stato d’avanzamento del progetto rappresentato.
 \item[Diagramma Nassi–Shneiderman] Notazione grafica per la rappresentazione della programmazione strutturata a blocchi. 
 \item[Diagramma WBS] Diagramma che decompone in modo gerarchico le attività di un progetto in sotto-attività (coese ma non necessariamente sequenziali): Work Breakdown Structure.
 \item[Documentazione] Insieme di documenti che descrivono le attività di progetto e le funzionalità, la struttura, l'implementazione e le modalità di utilizzo di un determinato prodotto software. 
 \item[DRI] Acronimo per Directly Responsible Individual, è un modello di lavoro adottato inizialmente da Apple e successivamente da Asana che consiste nell'identificare un singolo responsabile per ogni attività assegnabile. Il team decide di seguire questo modello. La motivazione principale risiede in questa frase: "When nobody knows who’s doing what, and when someone doesn’t feel ultimately responsible for driving work forward, the work may not happen at all." Riferimento: https://blog.asana.com/2015/06/why-one-assignee/ 
+\item[Editor] Programma di revisione o redazione informatica che consente di utilizzare, verificare o riorganizzare altri programmi o codici senza dover intervenire direttamente su questi.
 \item[Efficacia] Conformità alle attese.
 \item[Efficienza] Contenimento dei costi per raggiungere un obiettivo.
 \item[Framework]  La struttura operativa nella quale viene elaborato un dato software; un framework, in generale, include software di supporto, librerie, un linguaggio per gli script e altre componenti applicative che possono aiutare a realizzare le varie componenti di un progetto.
+\item[Git] Sistema di controllo di versione che serve a tracciare i cambiamenti in un repository.
 \item[GitHub] Servizio web di hosting per repository, che usa il sistema di versionamento Git; può essere utilizzato anche per la condivisione e la modifica di file di testo e documenti revisionabili.
 \item[Glossario] Elenco dei termini più rilevanti di un documento (o di un insieme di documenti) e loro significati.
+\item[Getter] Si tratta di un tipo di metodo pubblico utilizzato per accedere in lettura al valore di un membro privato di una classe, che non sarebbe accessibile direttamente.
 \item[Gulpease, indice di] Indice, tarato sulla lingua italiana, che misura la qualità di un documento stimandone il grado di leggibilità. Rispetto ad altri indici equivalenti per campo di applicazione, ha il vantaggio di esprimere la lunghezza media delle parole in lettere anziché in sillabe - cosa che ne consente una implementazione automatizzata fortemente affidabile. 
 \item[HTML5] Linguaggio di markup per la strutturazione del contenuto di una pagina web.
 \item[IDE]  Acronimo per Integrated Development Environment, ovvero Ambiente di Sviluppo Integrato; si riferisce ad un software che, in fase di programmazione, aiuta i programmatori nello sviluppo del codice sorgente di un programma. Spesso l'IDE aiuta lo sviluppatore segnalando errori di sintassi del codice direttamente in fase di scrittura, oltre a tutta una serie di strumenti e funzionalità di supporto alla fase di sviluppo e debugging.
@@ -40,15 +44,15 @@
 \item[Latex] Linguaggio di markup utilizzato per la produzione di documentazione tecnica e scientifica; è lo standard de facto per la comunicazione e la pubblicazione di documenti scientifici ed è disponibile come software libero.
 \item[Milestone] Punto nel tempo associato ad un valore strategico per un progetto.
 \item[MySQL] Software per la gestione di database relazionali.
-\item[PDCA (schema)] Schema iterativo di auto-miglioramento che consiste di quattro punti: Plan (individuare obiettivi di miglioramento), Do (eseguire ciò che si è pianificato), Check (verificare se ha funzionato) e Act (agire per correggersi); noto anche come ciclo di Deming o ciclo di miglioramento continuo, viene utilizzato in attività per il controllo e il miglioramento continuo di processi e prodotti.
+\item[PDCA, schema] Schema iterativo di auto-miglioramento che consiste di quattro punti: Plan (individuare obiettivi di miglioramento), Do (eseguire ciò che si è pianificato), Check (verificare se ha funzionato) e Act (agire per correggersi); noto anche come ciclo di Deming o ciclo di miglioramento continuo, viene utilizzato in attività per il controllo e il miglioramento continuo di processi e prodotti.
 \item[PDF] Acronimo per Portable Document Format, è un formato di file usato per presentare e scambiare documenti indipendentemente dal software, dall'hardware o dal sistema operativo. Ideato da Adobe, il formato PDF è diventato uno standard aperto incluso nella categoria ISO (International Organization for Standardization). I file PDF possono contenere collegamenti e pulsanti, campi modulo, audio, video e funzionalità di business logic.
 \item[PHP] Linguaggio di scripting orientato agli oggetti, utilizzato soprattutto per generare dinamicamente pagine web.
 \item[Pianificazione] L'organizzazione e il controllo di tempo, risorse e risultati.
+\item[Package] Un package è un meccanismo per organizzare classi Java in gruppi logici, principalmente (ma non solo) allo scopo di definire namespace distinti per diversi contesti. Il package ha lo scopo di riunire classi (o entità analoghe, quali interfacce ed enumerazioni) logicamente correlate.
 \item[PragmaDB] Software per la gestione di documenti creati durante il ciclo di vita di un progetto software.
 \item[Processo (software)] Insieme di attività correlate e coese che trasformano ingressi in uscite secondo regole fissate, consumando risorse nel farlo.
 \item[Progettazione] Processo di definizione dell'architettura, dei componenti, delle interfacce e delle altre caratteristiche di un sistema o componente.
 \item[Progettista] Chi sintetizza una soluzione a partire dalle specifiche di un problema già analizzato.
-\item[Progetto] Insieme di compiti da svolgere in modo collaborativo a fronte di un incarico (che diventa poi un impegno).
 \item[Programmatore] Chi implementa una parte della soluzione dei progettisti.
 \item[qualifica] Verifica e validazione.
 \item[Repository] Ambiente di un sistema informativo in cui vengono gestiti metadati attraverso tabelle relazionali. Il repository utilizzato dal team Hivex è fornito dalla piattaforma GitHub.
@@ -63,17 +67,20 @@
 \item[Scenario] Sequenza di passi che descrive un esempio di interazione tra l'utente e il sistema.
 \item[Server] Componente hardware e/o software che fornisce servizi o risorse a chi ne fa richiesta.
 \item[Sistema] Insieme di componenti organizzati ed integrati per svolgere una o più funzioni.
-\item[Slack ] Piattaforma per la comunicazione all'interno di un'organizzazione.
-\item[Slack, periodo di] Margine temporale che definisce per quanto tempo si possa ritardare un’attività.
+\item[Slack] Piattaforma per la comunicazione all'interno di un'organizzazione.
+\item[Slack, periodo di] Margine temporale che definisce per quanto tempo si possa ritardare un’attività senza causare ad altre attività un rallentamento.
 \item[sommario] Breve riassunto del contenuto di un documento.
 \item[SonarQube] Piattaforma open source per il controllo della qualità del codice sorgente.
 \item[SPICE] Acronimo per Software Process Improvement and Capability Determination; è un insieme di documenti tecnici standard per il processo di sviluppo software e le funzioni di gestione di business correlati. È uno degli standard congiunti dell’Organizzazione Internazionale per la Standardizzazione (ISO) e della Commissione Elettrotecnica Internazionale (IEC); corrisponde allo standard ISO/IEC 15504.
 \item[SQL] Structured Query Language: linguaggio di programmazione dichiarativo basato sull'algebra relazionale che serve a creare, manipolare e interrogare basi di dati relazionali.
+\item[Setter] Metodo pubblico di una classe, utilizzato per modificare lo stato di un attributo privato di un oggetto.
 \item[Stakeholder] Persona a vario titolo coinvolta nel ciclo di vita del software e che ha influenza sul prodotto o sul suo processo di sviluppo. Tale gruppo varia nella sua composizione a seconda dei diversi progetti, ma include sempre utenti/operatori e clienti (che necessariamente non sono sempre gli stessi).
-\item[Team] Gruppo di persone che collabora nello svolgimento di un’attività.
+\item[Stack] Porzione della memoria assegnata ad un programma dove vengono memorizzati i valori delle variabili attive nello scope di esecuzione.
+\item[Statement] Il più piccolo elemento autonomo di un linguaggio di programmazione imperativo che esprime una qualche azione da eseguire.
 \item[Travis] Servizio di integrazione continua utilizzato per testare progetti software ospitati su GitHub.
 \item[Trello] Servizio utilizzato per coordinare le attività di project management.
 \item[UML] Unified Modelling Language: famiglia di notazioni grafiche che si basano su un singolo meta-modello e servono a descrivere e progettare sistemi software.
 \item[verificatore] Chi verifica il lavoro dei programmatori.
 \item[versione] Istanza identificata di una parte della configurazione di un prodotto, nel tempo.
+\item[W3C] Acronimo per World Wide Web Consortium, l'organizzazione che sviluppa tecnologie che garantiscono l'interoperabilità (specifiche, guideline, software e applicazioni) per portare il World Wide Web al massimo del suo potenziale agendo da forum di informazioni, comunicazioni e attività comuni. 
 \item[Web Application] Applicazione accessibile via browser.
