--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_5.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_5.tex
@@ -333,14 +333,14 @@ Per uniformare il testo, i redattori sono tenuti a usare le seguenti macro-istru
 
 
 \subsection{Configurazione} \label{sec:config}
-Per gestire la configurazione del software va utilizzato il sistema \gloss{Git}, appoggiandosi alla piattaforma \gloss{GitHub}. Abbiamo scelto GitHub non solo per la qualità del servizio fornito ma anche per la natura open-source del progetto \proj, che ci abilita ad usare questa piattaforma gratuitamente. Il \gloss{repository} creato all'indirizzo \repo{} si divide nelle seguenti directory:
+Definiamo la configurazione di un prodotto come l'insieme delle parti di cui si compone e il modo in cui esse interagiscono fra di loro. Per gestire la configurazione del software va utilizzato il sistema \gloss{Git}, appoggiandosi alla piattaforma \gloss{GitHub}. Abbiamo scelto GitHub non solo per la qualità del servizio fornito ma anche per la natura open-source del progetto \proj, che ci abilita ad usare questa piattaforma gratuitamente. Il \gloss{repository} creato all'indirizzo \repo{} si divide nelle seguenti directory:
 \begin{description}
 	\item[\texttt{doc}] per la documentazione;
 	\item[\texttt{src}] per il codice sorgente.
 \end{description}
 
 \subsubsection{Identificazione e versionamento} \label{sec:idvers}
-Definiamo la configurazione del nostro software come composta dai seguenti elementi:
+La configurazione del nostro software si compone dei seguenti elementi:
 \begin{itemize}
 	\item directory contenenti codice sorgente e materiale correlato;
 	\item singoli file contenenti un documento.
